<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imgKate"
        android:layout_width="113dp"
        android:layout_height="103dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/katelogo" />

    <TextView
        android:id="@+id/tvVerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/verifyText"
        android:textColor="#D7FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgKate" />

    <EditText
        android:id="@+id/etVerCode"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/edittext_rounded_corners"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/verCode"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#303030"
        android:textCursorDrawable="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgKate" />

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_rounded_corners"
        android:backgroundTint="#FF903C"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnVerify"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVerCode" />

</androidx.constraintlayout.widget.ConstraintLayout>