<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imgKate"
        android:layout_width="113dp"
        android:layout_height="103dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/katelogo" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_rounded_corners"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#303030"
        android:textCursorDrawable="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgKate" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#303030"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_rounded_corners"
        android:backgroundTint="#FF903C"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnSignIn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>